--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,10 +1,13 @@
 <div class="container">
-
+  <span>Banane</span>
+  <div>
+    <aside-sidebar></aside-sidebar>
+  </div>
   <div>
     <acme-navbar creation-date="main.creationDate"></acme-navbar>
   </div>
 
-  <div class="jumbotron text-center">
+  <!--<div class="jumbotron text-center">
     <h1>'Allo, 'Allo!</h1>
     <p class="lead">
       <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
@@ -29,6 +32,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
 </div>
