--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,11 +1,54 @@
-<div class="container">
-  <span>Banane</span>
-  <div>
-    <aside-sidebar></aside-sidebar>
+
+<aside-sidebar state-model="main.stateModel" tab-model="main.tab"></aside-sidebar>
+
+
+<div class="content" ng-class="{'sidenav-open': main.stateModel}">
+  <div class="container panel">
+
+    <div ng-show="main.tabIsSet(1)">
+          <div class="jumbotron text-center">
+        <h1>'Allo, 'Allo!</h1>
+        <p class="lead">
+          <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
+          Always a pleasure scaffolding your apps.
+        </p>
+        <p class="animated infinite" ng-class="main.classAnimation">
+          <button type="button" class="btn btn-lg btn-success" ng-click="main.showToastr()">Splendid Toastr</button>
+        </p>
+        <p>
+          With ♥ thanks to the contributions of<acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']"></acme-malarkey>
+        </p>
+      </div>
+    </div>
+
+    <div ng-show="main.tabIsSet(2)">
+    <station-list></station-list>
+      <div class="row">
+        <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
+          <div class="thumbnail">
+            <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
+            <div class="caption">
+              <h3>{{ awesomeThing.title }}</h3>
+              <p>{{ awesomeThing.description }}</p>
+              <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url }}</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
-  <div>
+</div>
+
+
+
+
+<!--<div class="content" ng-class="{'sidenav-open': sidebar.stateModel}">
+<div class="container panel">
+      <h1>'Allo, 'Allo!</h1>-->
+  <!--<div>
     <acme-navbar creation-date="main.creationDate"></acme-navbar>
-  </div>
+  </div>-->
 
   <!--<div class="jumbotron text-center">
     <h1>'Allo, 'Allo!</h1>
@@ -33,5 +76,5 @@
       </div>
     </div>
   </div>-->
-
-</div>
+  <!--</div>
+</div>-->
