--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -7,7 +7,7 @@ sidebar.stateModel: {{sidebar.stateModel}}-->
       <!-- <hamburger-toggle state="sidebar.stateModel" ng-click="sidebar.openAside('left', true)"></hamburger-toggle> -->
       <hamburger-toggle state="sidebar.stateModel"></hamburger-toggle>
 		<a class="navbar-brand" href="https://github.com/franck43/stationvlille">
-			Stations V'Lille
+			App'end
 		</a>
     </div>
   </div>
@@ -20,10 +20,10 @@ sidebar.stateModel: {{sidebar.stateModel}}-->
         	<a ng-click="sidebar.setTab(1)">Home</a>
         </li>
         <li role="presentation" ng-class="{ active:sidebar.isSet(2) }">
-        	<a ng-click="sidebar.setTab(2)">Profile</a>
+        	<a ng-click="sidebar.setTab(2)">Meteo</a>
         </li>
         <li role="presentation" ng-class="{ active:sidebar.isSet(3) }">
-        	<a ng-click="sidebar.setTab(3)">Messages</a>
+        	<a ng-click="sidebar.setTab(3)">Carrousel</a>
         </li>
       </ul>
 </div>
