--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -28,54 +28,10 @@
     </div>
 
     <div ng-show="main.tabIsSet(3)">
-      <div class="row">
-        <h1>Carrousel example</h1>
-          <ui-carousel slides="ctrl.slides" slides-to-show="3" slides-to-scroll="1" initial-slide="1" autoplay="true" autoplay-speed="2000" dots="true">
-           
-            <carousel-item>
-              <h3>{{ item + 1 }}</h3>
-            </carousel-item>
-          </ui-carousel>
+      <div class="jumbotron text-center">
+      <h1>Carousel example</h1>
+      <p class="lead"><a href="#carouselPage"><button type="button" class="btn btn-lg btn-success" >See Carousel</button></a></p>
       </div>
     </div>
   </div>
 </div>
-
-
-
-
-<!--<div class="content" ng-class="{'sidenav-open': sidebar.stateModel}">
-<div class="container panel">
-      <h1>'Allo, 'Allo!</h1>-->
-  <!--<div>
-    <acme-navbar creation-date="main.creationDate"></acme-navbar>
-  </div>-->
-
-  <!--<div class="jumbotron text-center">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">
-      <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-      Always a pleasure scaffolding your apps.
-    </p>
-    <p class="animated infinite" ng-class="main.classAnimation">
-      <button type="button" class="btn btn-lg btn-success" ng-click="main.showToastr()">Splendid Toastr</button>
-    </p>
-    <p>
-      With ♥ thanks to the contributions of<acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']"></acme-malarkey>
-    </p>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
-      <div class="thumbnail">
-        <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
-        <div class="caption">
-          <h3>{{ awesomeThing.title }}</h3>
-          <p>{{ awesomeThing.description }}</p>
-          <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url }}</a></p>
-        </div>
-      </div>
-    </div>
-  </div>-->
-  <!--</div>
-</div>-->
