--- a/src/app/components/carouselPage/carouselPage.html
+++ b/src/app/components/carouselPage/carouselPage.html
@@ -1,4 +1,6 @@
-<div class="content">
+<aside-sidebar state-model="carctrl.stateModel" tab-model="carctrl.tab"></aside-sidebar>
+
+<div class="content" ng-class="{'sidenav-open': carctrl.stateModel}">
   <div class="container panel">
 <div class="row">
     <h1>Carousel example</h1>
