--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -7,7 +7,7 @@
 
     <div ng-show="main.tabIsSet(1)">
           <div class="jumbotron text-center">
-        <h1>App'end</h1>
+        <h1>App'name</h1>
         <p class="lead">
           With<br>
           <img src="assets/images/yeoman.png" alt="I'm Yeoman">
