add twitch top 100 games

--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -25,6 +25,9 @@ sidebar.stateModel: {{sidebar.stateModel}}-->
         <li role="presentation" ng-class="{ active:sidebar.isSet(3) }">
         	<a href="#carouselPage" ng-click="sidebar.setTab(3)">Carrousel</a>
         </li>
+        <li role="presentation" ng-class="{ active:sidebar.isSet(4) }">
+          <a href="#twitchPage" ng-click="sidebar.setTab(4)">Twitch</a>
+        </li>
       </ul>
 </div>
 
